2000-05-29  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/aclocal.m4 (CL_PROG_INSTALL): Fix typo.
        Reported by Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>.

2000-05-26  Bruno Haible  <haible@clisp.cons.org>

        * array.d (elt_move): Add "break" in switch statement.

2000-05-25  Bruno Haible  <haible@clisp.cons.org>

        * makemake.in (MSVCDIR): Change value.
          (TOUCH): On Win32, permit touch to fail.
          (iconv.h, iconv.lib): Fix win32 rules.
          (lisp${LEXE}): Depend on ${XCL_ICONVLIB}.
          (impnotes.html, clisp.html): On Win32, don't use sed.
          (distrib): On Win32, postprocess impnotes.html and clisp.html.

2000-05-23  Bruno Haible  <haible@clisp.cons.org>

        * autoconf/aclocal.m4 (CL_CANONICAL_HOST): Determine host_cpu,
          host_vendor, host_os correctly if $host has more than two hyphens.

2000-05-21  Bruno Haible  <haible@clisp.cons.org>

        * type.lisp (canonicalize-type): Treat STREAM and subclasses like
          CLOS classes, not like other built-in classes.
          (subtypep): Remove special code for STREAM and subclasses.

2000-05-21  Bruno Haible  <haible@clisp.cons.org>

        * init.lisp (LOAD): Add :external-format argument and conditionally
          pass it to OPEN.

2000-05-20  Bruno Haible  <haible@clisp.cons.org>

        * type.lisp (canonicalize-type): Recognize the encodings UTF-16 and
          UTF-7 as covering all of Unicode.

2000-05-20  Bruno Haible  <haible@clisp.cons.org>

        * type.lisp (subtype-integer): Inline the canonicalize-type call.

2000-05-20  Bruno Haible  <haible@clisp.cons.org>

        * sequence.d (SYSTEM::COERCED-SUBSEQ): New function.
        * encoding.d (CONVERT-STRING-FROM-BYTES, CONVERT-STRING-TO-BYTES): New
          functions.

2000-05-17  Bruno Haible  <haible@clisp.cons.org>

        * reploop.lisp (break-loop): terpri to *debug-io*, not *error-output*.

2000-05-16  Sam Steingold  <sds@gnu.org>
