@@ -1,3 +1,9 @@
+2000-05-30  Bruno Haible  <haible@clisp.cons.org>
+
+        * makemake.in (install-bin): Use $(INSTALL_PROGRAM) or $(INSTALL_DATA)
+          instead of "cp -p".
+        Reported by Thomas Klausner <wiz@danbala.ifoer.tuwien.ac.at>.
+
 2000-05-29  Bruno Haible  <haible@clisp.cons.org>
 
         * autoconf/aclocal.m4 (CL_PROG_INSTALL): Fix typo.
